--- a/src/components/CustomSelect/CustomSelect.module.scss
+++ b/src/components/CustomSelect/CustomSelect.module.scss
@@ -39,6 +39,7 @@
   appearance: none;
   background: url('/img/svg/contact-form-icon.svg') no-repeat right;
   background-position-x: calc(100% - 6px);
+  color: #000;
 
   .selectTitle {
     font-size: 22px;
