--- a/src/sections/about/team/Pastors/Pastors.module.scss
+++ b/src/sections/about/team/Pastors/Pastors.module.scss
@@ -137,6 +137,7 @@
 
     .linkTitle {
       font-size: 18px;
+      color: #000;
       @media (max-width: 1400px) {
         font-size: 14px;
       }
