--- a/src/components/Forms/Forms.module.scss
+++ b/src/components/Forms/Forms.module.scss
@@ -112,6 +112,7 @@
   padding: 0 30px;
   height: 60px;
   transition: all .15s ease;
+  color: #000;
 
   @media (max-width: 768px) {
     width: 100%;
