--- a/src/components/Modal/Modal.module.scss
+++ b/src/components/Modal/Modal.module.scss
@@ -10,6 +10,10 @@
   justify-content: center;
   z-index: 9999;
 
+  @media (max-width: 768px) {
+    position: absolute;
+  }
+
   .wrapper {
     position: relative;
     background-color: #fff;
