--- a/src/components/YearMessage/YearMessage.module.scss
+++ b/src/components/YearMessage/YearMessage.module.scss
@@ -9,6 +9,11 @@
     border-radius: 30px;
     overflow: hidden;
     max-height: 511px;
+
+    @media (max-width: 768px) {
+    border-radius: 13px; 
+    }
+
   }
 
 }
