--- a/src/components/MobileFooter/MobileFooter.module.scss
+++ b/src/components/MobileFooter/MobileFooter.module.scss
@@ -1,12 +1,17 @@
 .mobileFooter {
   display: none;
 
-  .logo {
-    margin-bottom: 25px;
-  }
-
   @media (max-width: 768px) {
     display: block;
+  }
+
+  .logo {
+    margin-bottom: 25px;
+
+    @media (max-width: 768px) {
+      max-width: 260px;
+    }
+
   }
 
   .accordion {
