--- a/src/components/BurgerMenu/BurgerMenu.module.scss
+++ b/src/components/BurgerMenu/BurgerMenu.module.scss
@@ -1,3 +1,11 @@
+
+
+.headerLogo {
+  @media (max-width: 768px) {
+    max-width: 260px;
+  }
+}
+
 .burger {
   position: relative;
   width: 90px;
