--- a/src/app/donation/page.module.scss
+++ b/src/app/donation/page.module.scss
@@ -1,5 +1,6 @@
-.verse {
+.payment {
   margin-bottom: 150px;
+  position: relative;
 
   @media (max-width: 1070px) {
     margin-bottom: 120px;
@@ -9,15 +10,100 @@
     margin-bottom: 80px;
   }
 
-  .verseTitle {
-    font-size: clamp(30px, 6vw, 50px);
-    margin-bottom: 45px;
+  .wrapper {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    gap: 40px;
+
+    @media (max-width: 660px) {
+      flex-direction: column;
+      align-items: flex-start;
+    }
+
+    .imgBox {
+      max-width: 36%;
+
+      @media (max-width: 660px) {
+        max-width: 60%;
+      }
+
+      @media (max-width: 425px) {
+        max-width: 40%;
+      }
+
+      .qrCode {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+        border-radius: 20px;
+        border: 1px solid black;
+      }
+
+    }
+
+    .content {
+      .title {
+        font-size: 30px;
+        line-height: 1.2;
+        margin-bottom: 7px;
+      }
+
+      .recovery {
+        display: block;
+        margin-bottom: 12px;
+        color: #333;
+      }
+
+      .link {
+        display: block;
+        text-decoration: underline;
+        color: #FFAD01;
+        margin-bottom: 44px;
+      }
+
+      .text {
+        color: #333333;
+      }
+
+    }
+
   }
 
-  .verseText {
-    line-height: 1.7;
-    font-size: 18px;
-    margin-bottom: 15px;
+}
+
+.info {
+  margin-bottom: 150px;
+  position: relative;
+
+  @media (max-width: 1070px) {
+    margin-bottom: 120px;
+  }
+
+  @media (max-width: 768px) {
+    margin-bottom: 80px;
+  }
+
+  .title {
+    font-size: 30px;
+    margin-bottom: 26px;
+  }
+
+  .List {
+    display: flex;
+    flex-direction: column;
+    gap: 30px;
+    max-width: 42%;
+
+    @media (max-width: 768px) {
+      max-width: 100%;
+    }
+
+    .item {
+      color: #333;
+      line-height: 1.2;
+    }
+
   }
 
 }
