--- a/src/sections/donation/Hero/Hero.module.scss
+++ b/src/sections/donation/Hero/Hero.module.scss
@@ -1,12 +1,12 @@
 .section {
-  min-height: 100dvh;
-  background-color: #D9D9D9;
+  position: relative;
+  background-color: #191919;
   border-radius: 100px;
   margin-bottom: 100px;
-  padding-top: 16%;
+  overflow: hidden;
 
   @media (max-width: 1600px) {
-    border-radius: 50px;
+    border-radius: 30px;
   }
 
   @media (max-width: 1070px) {
@@ -17,6 +17,13 @@
   @media (max-width: 768px) {
     border-radius: 0 0 25px 25px;
     padding-top: 150px;
+  }
+
+  .background {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    z-index: 1;
   }
 
   .details {
@@ -36,19 +43,33 @@
 
   .wrapper {
     display: flex;
-    align-items: flex-start;
+    align-items: flex-end;
     justify-content: space-between;
     padding-bottom: 50px;
     gap: 70px;
+    position: relative;
+    z-index: 2;
+    color: #fff;
+    min-height: 100dvh;
+    padding-bottom: 130px;
+
+    @media (max-width: 1440px) {
+      gap: 25px;
+    }
 
     @media (max-width: 1070px) {
       flex-direction: column;
       align-items: center;
       gap: 40px;
+      min-height: 700px;
     }
 
     @media (max-width: 768px) {
-      gap: 60px;
+      padding-bottom: 42px;
+      gap: 40px;
+      min-height: 660px;
+      align-items: flex-start;
+      justify-content: flex-end;
     }
 
     .content {
@@ -57,13 +78,44 @@
       font-size: clamp(18px, 3.7vw, 22px);
       line-height: 1.2;
 
+      .text {
+        margin-bottom: 30px;
+
+        @media (max-width: 768px) {
+          font-size: 16px;
+          color: #CFCFCF;
+          margin-bottom: 15px;
+
+          br {
+            display: none;
+          }
+
+        }
+  
+        &:last-child {
+          margin-bottom: 0;
+        }
+      }
+
       @media (max-width: 1070px) {
         text-align: center;
+      }
+
+      @media (max-width: 768px) {
+        text-align: left;
       }
 
       .title {
         font-size: clamp(2.5rem, 2.325rem + 1.275vw, 4.375rem);
         margin-bottom: 30px;
+        text-transform: uppercase;
+
+        @media (max-width: 768px) {
+          font-size: clamp(25px, 2.2vw, 40px);
+          text-align: left;
+          margin-bottom: 16px;
+        }
+
       }
 
       address {
