--- a/src/components/DontaionButton/DonationButton.module.scss
+++ b/src/components/DontaionButton/DonationButton.module.scss
@@ -7,6 +7,7 @@
   font-size: 18px;
   text-transform: uppercase;
   transition: all .15s ease;
+  text-align: center;
 
   @media (max-width: 1281px) {
     padding: 15px 20px;
