--- a/src/components/DonateForm/DonateForm.module.scss
+++ b/src/components/DonateForm/DonateForm.module.scss
@@ -15,9 +15,11 @@
     align-items: center;
     justify-content: space-between;
     gap: 20px;
+    max-width: 480px;
 
     @media (max-width: 1070px) {
       justify-content: center;
+      max-width: unset;
     }
 
     @media (max-width: 768px) {
