--- a/src/sections/home/Hero/Hero.module.scss
+++ b/src/sections/home/Hero/Hero.module.scss
@@ -1,6 +1,7 @@
 .hero {
   position: relative;
   overflow: hidden;
+  min-height: 900px;
   height: 100dvh;
   border-radius: 100px 100px 0 0;
 
@@ -10,6 +11,7 @@
 
   @media (max-width: 1070px) {
     border-radius: 30px 30px 0 0;
+    min-height: 100dvh;
   }
 
   @media (max-width: 768px) {
