--- a/src/sections/donation/Hero/Hero.module.scss
+++ b/src/sections/donation/Hero/Hero.module.scss
@@ -78,7 +78,7 @@
       @media (max-width: 768px) {
         width: 100%;
       }
-      
+
     }
 
     .content {
@@ -91,6 +91,10 @@
         display: block;
         margin-bottom: 30px;
 
+        @media (max-width: 768px) {
+          margin-bottom: 15px;
+        }
+
         &:last-child {
           margin-bottom: 0;
         }
@@ -98,16 +102,18 @@
 
       .text {
 
+        @media (max-width: 1070px) {
+          br {
+            display: none;
+          }
+        }
+
         @media (max-width: 768px) {
           font-size: 16px;
           color: #CFCFCF;
           margin-bottom: 15px !important;
-
-          br {
-            display: block;
-          }
-
         }
+
       }
 
       @media (max-width: 1070px) {
