--- a/src/components/PrayingButton/PrayingButton.module.scss
+++ b/src/components/PrayingButton/PrayingButton.module.scss
@@ -10,6 +10,7 @@
   text-transform: uppercase;
   border-radius: 50px;
   transition: all .15s ease;
+  text-align: center;
 
   &:hover {
     border-color: transparent;
