--- a/src/app/hello/page.module.scss
+++ b/src/app/hello/page.module.scss
@@ -229,8 +229,8 @@
       }
 
       .image {
-        width: 100%;
-        height: 100%;
+        width: 110% !important;
+        height: 110% !important;
         object-fit: cover;
       }
 
