--- a/src/components/DonationBanner/DonationBanner.module.scss
+++ b/src/components/DonationBanner/DonationBanner.module.scss
@@ -12,9 +12,19 @@
     border-radius: 30px;
     display: flex;
     justify-content: space-between;
-    aspect-ratio: 3.5 / 1;
-    max-height: 433px;
+    min-height: 433px;
     overflow: hidden;
+    width: 100%;
+
+    &::after {
+      content: '';
+      position: absolute;
+      top: 0;
+      right: 0;
+      width: 100%;
+      height: 100%;
+      background-color: #0000005a;
+    }
 
     @media (max-width: 1070px) {
       padding: 30px;
@@ -65,64 +75,58 @@
       z-index: 4;
     }
 
-    .info {
-      display: flex;
-      align-items: flex-end;
-
-      @media (max-width: 768px) {
-        width: 100%;
-      }
-
-      .infoBox {
-        gap: 30px;
-        align-items: center;
-        position: absolute;
-        bottom: 30px;
-        right: 30px;
-
-        @media (max-width: 1070px) {
-          gap: 10px;
-        }
-
-        @media (max-width: 768px) {
-          position: static;
-          flex-direction: column;
-          align-items: flex-start;
-          gap: 25px;
-        }
-
-        @media (max-width: 425px) {
-          width: 100%;
-        }
-      }
-
-      .infoBox,
-      .priceBox {
-        display: flex;
-      }
-
-      .priceBox {
-        flex-direction: column;
-        color: #fff;
-
-        .price {
-          font-size: clamp(30px, 4.5vw, 60px);
-
-          @media (max-width: 1070px) {
-            font-size: 40px;
-          }
-
-        }
-
-      }
-
-    }
-
     .title {
       font-size: clamp(30px, 4.8vw, 50px);
       color: #fff;
     }
 
+    .item {
+      margin-bottom: 20px;
+
+      &:last-child {
+        margin-bottom: 0;
+      }
+
+      .description {
+        display: block;
+        text-align: right;
+        color: #fff;
+        margin-bottom: 16px;
+      }
+
+      .info {
+        display: flex;
+        align-items: flex-start;
+        gap: 30px;
+      }
+
+      .priceInfo {
+        display: flex;
+        flex-direction: column;
+        color: #fff;
+
+        .price {
+          font-size: clamp(40px, 4.7vw, 60px);
+        }
+
+      }
+
+      .increasedPriceText {
+        text-align: center;
+        font-size: 20px;
+      }
+
+    }
+
+  }
+
+  .itemsList {
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+    align-items: flex-end;
+    z-index: 3;
   }
 
 }
