--- a/src/sections/event/Hero/Hero.module.scss
+++ b/src/sections/event/Hero/Hero.module.scss
@@ -18,7 +18,7 @@
   }
 
   @media (max-width: 1600px) {
-    border-radius: 30px 30px 0 0;
+    border-radius: 30px;
   }
 
   @media (max-width: 1070px) {
