--- a/src/sections/home/Hero/Hero.module.scss
+++ b/src/sections/home/Hero/Hero.module.scss
@@ -5,12 +5,11 @@
   height: 100dvh;
   border-radius: 100px 100px 0 0;
 
-  @media (max-width: 1400px) {
-    border-radius: 50px 50px 0 0;
+  @media (max-width: 1600px) {
+    border-radius: 30px;
   }
 
   @media (max-width: 1070px) {
-    border-radius: 30px 30px 0 0;
     min-height: 100dvh;
   }
 
