--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -135,7 +135,7 @@ main {
   border-radius: 100px;
 
   @media (max-width: 1600px) {
-    border-radius: 30px 30px 0 0;
+    border-radius: 30px;
   }
 
   @media (max-width: 1070px) {
