--- a/src/components/DonationBanner/DonationBanner.module.scss
+++ b/src/components/DonationBanner/DonationBanner.module.scss
@@ -7,14 +7,15 @@
 
   .wrapper {
     position: relative;
-    background-color: #D9D9D9;
+    width: 100%;
+    min-height: 433px;
     padding: 60px;
     border-radius: 30px;
     display: flex;
     justify-content: space-between;
-    min-height: 433px;
+    flex-wrap: wrap;
+    background-color: #D9D9D9;
     overflow: hidden;
-    width: 100%;
 
     &::after {
       content: '';
@@ -23,27 +24,19 @@
       right: 0;
       width: 100%;
       height: 100%;
-      background-color: #0000005a;
+      background-color: #0000009a;
     }
 
     @media (max-width: 1070px) {
       padding: 30px;
       max-height: unset;
-      aspect-ratio: 2.5 / 1;
     }
 
     @media (max-width: 786px) {
       flex-direction: column;
       align-items: flex-start;
-      aspect-ratio: 1.6 / 1;
       min-height: 390px;
       width: 100%;
-    }
-
-    @media (max-width: 425px) {
-      aspect-ratio: 0.6 / 1;
-      justify-content: end;
-      gap: 35px;
     }
 
     .picture {
@@ -72,19 +65,24 @@
 
     .info,
     .title {
-      z-index: 4;
+      z-index: 2;
     }
 
     .title {
       font-size: clamp(30px, 4.8vw, 50px);
       color: #fff;
+      margin-bottom: 30px;
     }
 
     .item {
-      margin-bottom: 20px;
+      margin-bottom: 60px;
 
       &:last-child {
         margin-bottom: 0;
+      }
+
+      @media (max-width: 768px) {
+        margin-bottom: 40px;
       }
 
       .description {
@@ -92,12 +90,24 @@
         text-align: right;
         color: #fff;
         margin-bottom: 16px;
+
+        @media (max-width: 768px) {
+          text-align: left;
+          margin-bottom: 8px;
+        }
+
       }
 
       .info {
         display: flex;
         align-items: flex-start;
         gap: 30px;
+
+        @media (max-width: 768px) {
+          flex-direction: column;
+          gap: 15px;
+        }
+
       }
 
       .priceInfo {
@@ -127,6 +137,11 @@
     justify-content: flex-end;
     align-items: flex-end;
     z-index: 3;
+
+    @media (max-width: 768px) {
+      align-items: unset;
+    }
+
   }
 
 }
