--- a/src/components/Forms/Forms.module.scss
+++ b/src/components/Forms/Forms.module.scss
@@ -8,15 +8,33 @@
 
 }
 
+.checkboxLabel {
+  width: 100%;
+  display: flex;
+  align-items: center;
+  gap: 10px;
+  margin-bottom: 32px;
+  cursor: pointer;
+
+  input[type="checkbox"] {
+    cursor: pointer;
+  }
+
+  @media (max-width: 768px) {
+    margin-bottom: 16px;
+  }
+
+}
+
+input[type="checkbox"] {
+  min-width: 30px;
+  height: 30px;
+}
+
 .standartForm {
   display: flex;
   align-items: flex-start;
   flex-direction: column;
-
-  .agreementChecbox {
-    width: 30px;
-    height: 30px;
-  }
 
   .checkboxTitle {
     @media (max-width: 768px) {
@@ -28,24 +46,6 @@
     display: flex;
     flex-direction: column;
     width: 100%;
-  }
-
-  .checkboxLabel {
-    width: 100%;
-    display: flex;
-    align-items: center;
-    gap: 10px;
-    margin-bottom: 32px;
-    cursor: pointer;
-
-    input[type="checkbox"] {
-      cursor: pointer;
-    }
-
-    @media (max-width: 768px) {
-      margin-bottom: 16px;
-    }
-
   }
 
   .input {
