--- a/src/components/DonateForm/DonateForm.module.scss
+++ b/src/components/DonateForm/DonateForm.module.scss
@@ -15,7 +15,7 @@
     align-items: center;
     justify-content: space-between;
     gap: 20px;
-    max-width: 480px;
+    // max-width: 480px;
 
     @media (max-width: 1070px) {
       justify-content: center;
@@ -60,7 +60,8 @@
   }
 
   .button {
-    max-width: 60%;
+    // max-width: 100%;
+    width: 100%;
   }
 
   .text {
