--- a/src/components/Modal/Modal.module.scss
+++ b/src/components/Modal/Modal.module.scss
@@ -6,9 +6,9 @@
   height: 100dvh;
   background-color: #000000b7;
   display: flex;
-  align-items: center;
   justify-content: center;
   z-index: 9999;
+  overflow: scroll;
 
   @media (max-width: 768px) {
     position: fixed;
@@ -17,7 +17,7 @@
   }
 
   .wrapper {
-    position: relative;
+    position: absolute;
     background-color: #fff;
     border-radius: 50px;
     padding: 2.7% 4.5%;
