--- a/src/components/ContactsForm/ContactsForm.module.scss
+++ b/src/components/ContactsForm/ContactsForm.module.scss
@@ -65,6 +65,7 @@
   .title {
     font-size: clamp(22px, 4.7vw, 30px);
     margin-bottom: 40px;
+    line-height: 3.2rem;
 
     @media (max-width: 1700px) {
       margin-bottom: 20px;
@@ -199,4 +200,8 @@
     font-size: 14px;
   }
 
+}
+
+.error {
+  color: red !important;
 }
