--- a/src/components/DonationBanner/DonationBanner.module.scss
+++ b/src/components/DonationBanner/DonationBanner.module.scss
@@ -145,3 +145,27 @@
   }
 
 }
+
+.btn {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-transform: uppercase;
+  font-size: 18px;
+  border-radius: 100px;
+  padding: 0 30px;
+  height: 60px;
+  transition: all .15s ease;
+  color: #000;
+  background-color: #fff;
+
+  @media (max-width: 768px) {
+    width: 100%;
+  }
+
+  &:hover {
+    background-color: #FFAC00;
+    color: #fff;
+  }
+
+}
