--- a/src/components/DontaionButton/DonationButton.module.scss
+++ b/src/components/DontaionButton/DonationButton.module.scss
@@ -8,6 +8,7 @@
   text-transform: uppercase;
   transition: all .15s ease;
   text-align: center;
+  cursor: pointer;
 
   @media (max-width: 1281px) {
     padding: 15px 20px;
