upt: fix styles issues in DonationBanner

--- a/src/components/DontaionButton/DonationButton.module.scss
+++ b/src/components/DontaionButton/DonationButton.module.scss
@@ -9,6 +9,7 @@
   transition: all .15s ease;
   text-align: center;
   cursor: pointer;
+  width: 100%;
 
   @media (max-width: 1281px) {
     padding: 15px 20px;
