--- a/src/components/DonationBanner/DonationBanner.module.scss
+++ b/src/components/DonationBanner/DonationBanner.module.scss
@@ -12,7 +12,7 @@
     padding: 60px;
     border-radius: 30px;
     display: flex;
-    justify-content: space-between;
+    justify-content: flex-end;
     flex-wrap: wrap;
     background-color: #D9D9D9;
     overflow: hidden;
@@ -35,7 +35,7 @@
     @media (max-width: 786px) {
       flex-direction: column;
       align-items: flex-start;
-      min-height: 390px;
+      min-height: 490px;
       width: 100%;
     }
 
@@ -69,9 +69,18 @@
     }
 
     .title {
-      font-size: clamp(30px, 4.8vw, 50px);
+      position: absolute;
+      top: 60px;
+      left: 60px;
+      font-size: clamp(27px, 4.8vw, 50px);
       color: #fff;
       margin-bottom: 30px;
+
+      @media (max-width: 1070px) {
+        top: 30px;
+        left: 30px;
+      }
+
     }
 
     .item {
@@ -100,12 +109,14 @@
 
       .info {
         display: flex;
-        align-items: flex-start;
+        align-items: center;
         gap: 30px;
 
         @media (max-width: 768px) {
           flex-direction: column;
+          align-items: flex-start;
           gap: 15px;
+          // align-items: flex-end;
         }
 
       }
@@ -114,11 +125,22 @@
         display: flex;
         flex-direction: column;
         color: #fff;
+        min-width: fit-content;
+        align-items: center;
+
+        @media (max-width: 768px) {
+          align-items: flex-start;
+        }
 
         .price {
           font-size: clamp(40px, 4.7vw, 60px);
         }
 
+      }
+
+      .buttonBox {
+        display: inline;
+        width: 100%;
       }
 
       .increasedPriceText {
@@ -140,6 +162,7 @@
 
     @media (max-width: 768px) {
       align-items: unset;
+      width: 100%;
     }
 
   }
