--- a/src/sections/event/Schedule/Schedule.module.scss
+++ b/src/sections/event/Schedule/Schedule.module.scss
@@ -41,11 +41,12 @@
       display: flex;
       align-items: center;
       gap: 20px;
-      width: 215px;
+      min-width: 25%;
       padding-bottom: 6px;
 
       @media (max-width: 768px) {
         width: fit-content;
+        min-width: unset;
       }
 
       .dayNumber {
@@ -84,7 +85,7 @@
 
       .item {
         display: flex;
-        align-items: flex-start;
+        align-items: center;
         padding-bottom: 26px;
 
         @media (max-width: 768px) {
@@ -100,6 +101,7 @@
           // justify-content: space-between;
           width: 100%;
           gap: 2rem;
+          align-items: center;
 
           @media (max-width: 768px) {
             width: 70%;
@@ -107,6 +109,7 @@
 
           @media (max-width: 490px) {
             flex-direction: column;
+            align-items: unset;
             gap: 0;
           }
 
@@ -155,10 +158,11 @@
         }
 
         .description {
-          width: 40%;
+          min-width: 47%;
 
           @media (max-width: 490px) {
             width: 100%;
+            min-width: unset;
           }
         }
 
