--- a/src/styles/swiper.scss
+++ b/src/styles/swiper.scss
@@ -48,3 +48,16 @@
   }
 
 }
+
+.swiper-scrollbar-drag {
+  background-color: #fff !important;
+}
+
+.swiper-pagination-bullet.swiper-pagination-bullet-active.swiper-pagination-bullet-active-main {
+  background-color: #fff !important;
+}
+
+.swiper-pagination-bullet.swiper-pagination-bullet-active-next,
+.swiper-pagination-bullet.swiper-pagination-bullet-active-prev {
+  background-color: #ffffff !important;
+}
